[package]
name = "xanal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simple-error = "0.2"
clap = { version = "3", features = ["derive"] }
dotenv = "0.15"
flexi_logger = "0.22"
lipsum = "0.8"
base64 = "0.13"
hex = "0.4"
log = "0.4"
