[package]
name = "xanal"
version = "0.2.0"
authors = ["obwan02"]
edition = "2021"
description = "An Xor ANALyser for cryptanalysis"
readme = "README.md"
repository = "https://github.com/obwan02/xanal"
# license
# license-file


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simple-error = "0.2"
tinyvec = { version = "1.6", features = ["alloc"] }
clap = { version = "3", features = ["derive"] }
indicatif = "0.16"
dotenv = "0.15"
flexi_logger = "0.22"
lipsum = "0.8"
base64 = "0.13"
hex = "0.4"
log = "0.4"

[profile.release]
strip = true
lto = true
