[package]
name = "xcrypt"
version = "0.3.0"
authors = ["obwan02"]
edition = "2021"
description = "An Xor analyser for CRYPTanalysis"
readme = "README.md"
repository = "https://github.com/obwan02/xcrypt"
# license
# license-file


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simple-error = "0.2"
tinyvec = { version = "1.6", features = ["alloc"] }
clap = { version = "3", features = ["derive"] }
indicatif = "0.16"
dotenv = "0.15"
console = "0.15"
flexi_logger = "0.22"
lipsum = "0.8"
base64 = "0.13"
hex = "0.4"
log = "0.4"

[profile.release]
opt-level = 3
debug-assertions = false
overflow-checks = false
panic = 'unwind'
debug = false
strip = true
codegen-units = 16
lto = true
rpath = false
